--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-    <h1>Inventaire vdésespoirvraimentprofond</h1>
+    <h1>Inventaire vespérance</h1>
     
     <p>Stock au 12/03/2025</p>
     
@@ -170,6 +170,14 @@ function naturalSort(a, b) {
 }
 
 function trierColonne(index, colonne) {
+    // Liste des colonnes interdites au tri
+    const colonnesInterdites = [1, 3, 7, 8, 9, 10];
+
+    // Vérifie si la colonne est dans la liste des colonnes interdites
+    if (colonnesInterdites.includes(index)) {
+        return; // Ne fait rien si la colonne est interdite
+    }
+
     // Définir l'ordre de tri
     if (sortColumn === colonne) {
         sortAscending = !sortAscending; // Inverser le tri si on reclique
@@ -182,7 +190,7 @@ function trierColonne(index, colonne) {
         let valA = a[colonne] || "";
         let valB = b[colonne] || "";
 
-        // Tri numérique pour colonnes 4 et 6
+        // Tri numérique pour certaines colonnes
         if (index === 1 || index === 2 || index === 3 || index === 5) {
             const numA = parseFloat(valA) || 0;
             const numB = parseFloat(valB) || 0;
@@ -195,6 +203,7 @@ function trierColonne(index, colonne) {
 
     afficherTableau();
 }
+
 
 
 
