--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
 
     <h2>Inventaire dynamique de chimie</h2>
 
-    <h3>Vous pouvez cliquer sur l'entête des colonnes nom ou quantités pour trier les données.</h3>
-
-    <h3>Pour trier par pictogrammes de sécurité, veuillez rechercher SGH.. (SGH01 pour explosif, 02 inflammable, 03 comburant, 05 corrosif, 06 mortel, 07 nocif, 08 cancérogène et 09 environnement).</h3>
-
-    <h3>Aucun accent dans la recherche.</h3>
+    <h3>Vous pouvez cliquer sur l'entête des colonnes nom ou quantités pour trier les données.<br><br>Pour trier par pictogrammes de sécurité, veuillez rechercher SGH.. (SGH01 pour explosif, 02 inflammable, 03 comburant, 05 corrosif, 06 mortel, 07 nocif, 08 cancérogène et 09 environnement). <br><br> Aucun accent dans la recherche.</h3>
     
     <table id="tableau" class="display">
         <thead>
